@@ -232,9 +232,21 @@ $(document).ready (function () {
 				},
 				function (data, status) {
 					options = "";
+					var arr=[];
+					
 					jQuery.each (data, function (id, value) {
-						options += "<option value=\""+id+"\">"+value+"</option>";
+						
+						/* Get all values in id_alert_templates select	*/
+						$("#id_alert_templates option").each(function() {
+							  arr.push($(this).val());
+						});
+					
+						/* If the value is not in the select, then add it	*/
+						if ($.inArray(id,arr) <= -1)						
+							options += "<option value=\""+id+"\">"+value+"</option>";
+							
 					});
+					
 					$("#id_alert_templates").append (options);
 					$("#template_loading").hide ();
 					$select_template.enable ();
@@ -270,8 +282,19 @@ $(document).ready (function () {
 			},
 			function (data, status) {
 				options = "";
+				var arr=[]; 
+				
 				jQuery.each (data, function (id, value) {
-					options += "<option value=\""+id+"\">"+value+"</option>";
+					
+					/* Get all values in id_alert_templates select	*/
+					$("#id_not_standby_alerts option").each(function() {
+						  arr.push($(this).val());
+					});
+				
+					/* If the value is not in the select, then add it	*/
+					if ($.inArray(id,arr) <= -1)						
+						options += "<option value=\""+id+"\">"+value+"</option>";
+				
 				});
 				$("#id_not_standby_alerts").append (options);
 				$("#alerts_loading").hide ();
@@ -290,8 +313,17 @@ $(document).ready (function () {
 			},
 			function (data, status) {
 				options = "";
+				var arr=[];
+				
 				jQuery.each (data, function (id, value) {
-					options += "<option value=\""+id+"\">"+value+"</option>";
+					/* Get all values in id_alert_templates select	*/
+					$("#id_standby_alerts option").each(function() {
+						  arr.push($(this).val());
+					});
+				
+					/* If the value is not in the select, then add it	*/
+					if ($.inArray(id,arr) <= -1)								
+						options += "<option value=\""+id+"\">"+value+"</option>";
 				});
 				$("#id_standby_alerts").append (options);
 				$("#alerts_loading2").hide ();
